Archive2/c4/c4dbd577ace95e/output
main.cpp: In member function 'void A::foo()':
main.cpp:5:15: error: no matching function for call to 'A::~A()'
         A::~A();
               ^
main.cpp:5:15: note: candidate is:
main.cpp:2:5: note: A::~A()
     ~A() {}
     ^
main.cpp:2:5: note:   candidate expects 1 argument, 0 provided
